# rust-kafka-postgres-poc

./: Cargo.toml  README.md  docker-compose.yaml
product-import-kafka/src/: main.rs
src/: main.rs
