[package]
name = "product-import-kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1"] }
